[package]
name = "projector"
version = "0.1.0"
authors = ["tasuren <tasuren@aol.com>"]
edition = "2021"
description = "マインドマップ形式のメモソフトです。"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://projector.tasuren.xyz/information.html"
repository = "https://github.com/tasuren/projector"
keywords = ["application", "notes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
rfd = "0.10.0"
futures = "0.3.24"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tracing-subscriber = "0.3.15"

[target.'cfg(target_arch="wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
async-std = "1.12.0"
gloo-utils = "0.1.5"
gloo-file = "0.2.3"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"

[package.metadata.bundle]
name = "projector"
identifier = "xyz.tasuren.projector"
icon = ["assets/icon.png"]
resources = []
copyright = "(c) tasuren 2022"
category = "public.app-category.utilities"
short_description = "マインドマップ形式のメモソフトです。"
long_description = """メモをするためのソフトです。
マインドマップのような形式でメモを追加できます。"""

[package.metadata.winres]
OriginalFilename = "projector.exe"
LegalCopyright = "(c) tasuren 2022"

[profile.release]
opt-level = 2 # fast and small wasm